AspectJ 1.9.0.RC1